--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,8 @@ body {
   border: 3px solid #0077ff;
   margin: 0 20px;
   margin-right: 10px;
+  height: 40px;
+  width: 40px;
 }
 
 .avatars img:last-child {
